# dividas_kaki

./: .dev-env  .dev.env  alembic.ini  docker-compose.yaml  pyproject.toml  setenv.sh  teste.py
migrations/: env.py
migrations/versions/: 2483e8243475_create_tabãles_debts.py  607577d2840b_add_user_table.py  7db70ebe2319_add_join_user_devedor.py  dfb01be1a7ad_create_tables.py
src/: main.py  router.py
src/core/: auth.py  database.py  deps.py  entity.py  get_env.py  security.py  settings.py
src/dividas/: entities.py  models.py  repository.py  routes.py  teste.py  use_cases.py  utils.py
src/usuario/: entities.py  models.py
